[package]
name = "rustychain"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "3.0"
eval = "0.4"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.clk]
version = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["macros"]
